fix(table) fix table content max-width truncation bug

--- a/views/assets/stylesheets/app.css
+++ b/views/assets/stylesheets/app.css
@@ -1152,13 +1152,13 @@ table {
   margin-left: 0; }
 
 .qor-table__content {
-  max-width: 180px;
+  max-width: 300px;
   max-height: 24px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap; }
   .qor-table__content p {
-    max-width: 180px;
+    max-width: 3000px;
     max-height: 24px;
     overflow: hidden;
     text-overflow: ellipsis;
