--- a/views/assets/stylesheets/scss/app/_table.scss
+++ b/views/assets/stylesheets/scss/app/_table.scss
@@ -76,11 +76,11 @@ table {
 }
 
 .qor-table__content {
-    max-width: 180px;
+    max-width: 300px;
     max-height: 24px;
     @include text-overflow();
     p {
-        max-width: 180px;
+        max-width: 3000px;
         max-height: 24px;
         @include text-overflow();
         font-size: 13px;
